--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,4 @@
+# https://circleci.com/blog/how-to-set-up-a-continuous-integration-pipeline-for-a-rails-dual-boot/
 version: 2.1
 
 orbs:
@@ -14,17 +15,19 @@ jobs:
             - dotnet-packages-v1-{{ checksum "SimpleCalc/SimpleCalc.csproj" }}
       - run:
           name: "Install project dependencies"
-          command: dotnet.exe restore
-      - save_cache:
-          paths:
-            - C:\Users\circleci\.nuget\packages
-          key: dotnet-packages-v1-{{ checksum "SimpleCalc/SimpleCalc.csproj" }}
-      - run:
-          name: "Run Application Tests"
-          command: dotnet.exe test -v n --results-directory:test_coverage --collect:"Code Coverage"
-      - store_artifacts:
-          path: C:\Users\circleci\project\test_coverage
+#          command: dotnet.exe restore
+          command: echo "test"
+#      - save_cache:
+#          paths:
+#            - C:\Users\circleci\.nuget\packages
+#          key: dotnet-packages-v1-{{ checksum "SimpleCalc/SimpleCalc.csproj" }}
+#      - run:
+#          name: "Run Application Tests"
+#          command: dotnet.exe test -v n --results-directory:test_coverage --collect:"Code Coverage"
+#      - store_artifacts:
+#          path: C:\Users\circleci\project\test_coverage
   build:
+    type: approval
     description: Build application with Release configuration
     executor:
       name: windows/default
@@ -33,6 +36,7 @@ jobs:
       - run:
           name: "Build Application according to some given configuration"
           command: dotnet.exe build --configuration Release
+
 workflows:
   build-and-test:
     jobs:
