--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,10 @@ workflows:
   build-and-test:
     jobs:
       - test
-      - build:
+      - hold:
           type: approval
           requires:
             - test
+      - build:
+          requires:
+            - hold
